Remove use of deprecated URL constructor (#256)